Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53569

Aspects should not change access rights of virtuals

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.7.0 RC
    • 5.7.0 Beta
    • Qt3D
    • None
    • 1802f11f4b99c93dc9c2e4b5556592db005b5817

      QLogicAspect ad QRenderAspect change the jobsToExecute() function to no longer be private. Restore them to private.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mkrus Mike Krus
            seanharmer Sean Harmer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes