Avoid changing access rights to virtual methods

Added QRenderAspectTester as friend for testing

Task-number: QTBUG-53569
Change-Id: Ia7adde188065a2ba02b7fd480fcfe545ccbf4720
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>